--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==2.0.0
 Django==4.2.3
 gunicorn==21.2.0
 packaging==23.1
+Pillow==10.0.0
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 sqlparse==0.4.4
